fix calendar day align

--- a/src/scss/block/dataview/view/calendar.scss
+++ b/src/scss/block/dataview/view/calendar.scss
@@ -45,7 +45,7 @@
 				.head {
 					.icon { flex-shrink: 0; width: 24px !important; height: 24px !important; opacity: 0; transition: opacity $transitionCommon; }
 
-					.number { @include text-paragraph; text-align: right; }
+					.number { @include text-paragraph; text-align: right; width: 100%; }
 					.number {
 						.inner { display: inline-block; }
 					}
